[package]
name = "aws-s3-undelete"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
aws-config = { version= "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.48"
clap = { version = "4.5.17", features = ["derive", "env"] }
futures = "0.3.30"
futures-concurrency = "7.6.1"
tokio = { version = "1", features = ["full"] }
